5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1592_2426.log
== TEST (2019-03-29 22:37:00) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distância = vm/t
qlitros = tempo * vm 
print(distância)
print(qlitros)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    distância = vm/t
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:37:18) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distancia = vm/t
qlitros = tempo * vm 
print(distância)
print(qlitros)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    distancia = vm/t
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:37:32) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distancia = vm/tempogasto
qlitros = tempo * vm 
print(distância)
print(qlitros)


-- EXECUTION TIME:
0.154275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 5, in <module>
    qlitros = tempo * vm 
NameError: name 'tempo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:37:35) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distancia = vm/tempogasto
qlitros = tempo * vm 
print(distância)
print(qlitros)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qlitros = tempo * vm 
NameError: name 'tempo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:37:52) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distancia = vm/tempogasto
qlitros = tempogasto * vm 
print(distancia)
print(qlitros)


-- EXECUTION TIME:
0.204865
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111
900.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0
600.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667
96.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:37:53) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distancia = vm/tempogasto
qlitros = tempogasto * vm 
print(distancia)
print(qlitros)


-- OUTPUT:
11.11111111111111
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:39:01) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distancia = tempogasto * vm
qlitros = vm/tempogasto
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:39:39) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distancia = tempogasto * vm
qlitros = distancia/tempogasto
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:39:57) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(" "))

distancia = tempogasto * vm
qlitros = distancia/vm
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:43:44) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))
autonomia = 12.0

distancia = tempogasto * vm
qlitros = tempogasto * autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:44:24) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 12.0
distancia = tempogasto * vm
qlitros = tempogasto * autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:45:07) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 12.0
distancia = autonomia * vm
qlitros = tempogasto * autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
1200.0
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:45:23) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 12.0
distancia = tempogasto * vm
qlitros = tempogasto * autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:45:38) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 12.0
distancia = tempogasto * vm
qlitros = vm * autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
1200.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:45:59) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 12.0
distancia = tempogasto * vm
qlitros = tempogasto/autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
0.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:46:24) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 0.12
distancia = tempogasto * vm
qlitros = tempogasto/autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:46:35) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 0.12
distancia = tempogasto * vm
qlitros = tempogasto/autonomia
print(distancia)
print(qlitros)


-- EXECUTION TIME:
0.139099
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
41.66666666666667
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:47:11) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 0.12
distancia = tempogasto * vm
qlitros = tempogasto/autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:48:08) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 0.12
distancia = tempogasto * vm
qlitros = distancia/autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
7500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:48:21) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 0.12
distancia = tempogasto * vm
qlitros = distancia/autonomia
print(distancia)
print(qlitros)


-- EXECUTION TIME:
0.14057
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
7500.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
5000.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
800.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:48:26) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 12
distancia = tempogasto * vm
qlitros = distancia/autonomia
print(distancia)
print(qlitros)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:48:34) 
-- CODE:
tempogasto = float(input(" "))
vm = float (input(""))

autonomia = 12
distancia = tempogasto * vm
qlitros = distancia/autonomia
print(distancia)
print(qlitros)


-- EXECUTION TIME:
0.18121
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
